--- a/lists-conditionals-assignment/src/components/Input.css
+++ b/lists-conditionals-assignment/src/components/Input.css
@@ -1,18 +1,6 @@
-.text-input {
+.Input {
   margin-top: 3rem;
   width: 50%;
   padding: 1rem;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  padding: 10px;
-}
-
-.box {
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  text-align: center;
-  margin: 1rem;
+  margin-bottom: 1rem;
 }
